view mapped grease pencil grab in edit mode #47833

Closed
opened 2016-03-17 14:34:23 +01:00 by Robin van Grinsven · 12 comments

System Information
Acer Aspire V3-772G
Windows 8.1

Processor: Intel(R) Core(TM) i7-4702MQ CPU @ 2.20GHz 2.20GHz
RAM: 8GB
system type : 64-bit operating System. X64 based processor

Nividia Geforce GTX 760M

Blender Version
Broken: 2.77 RC2 date: 2016-03-07 19.56 hash: 02cabda factory settings
also tested on 2.76 RC3 Date 2015-09-30 16:05 hash fb78f6b factory settings
Worked: N.A.

Short description of error
grease pencil points of view port mapped(2D) in edit mode, the transformations do not correspond to the mouse movement.
grab +mouse up = points go right
grab + mouse down = points go left
grab +mouse left = points go left but also down
grab + mouse down = point go right but also up
rotate and scale the orgin point is at the right of the screen

when a drawing of 2d and a drawing of 3d are selected the 3d version is also affected with wrong transformation mappings

Exact steps for others to reproduce the error
empty file:(factory settings)
go to grease pencil tab in the tool window of the 3d view
from the stroke placement options[View,Cursor,Surface,Stroke], pick: View
draw a pattern(D-key)
click enable edit in the tool panel,
select points [example press B-key]
do a transformation: G-key,R-Key,S-Key
(in combination with a 3D drawing)
from the stroke placement options[View,Cursor,Surface,Stroke], pick: Cursor
draw a pattern(D-key)
select points [example press B-key]
do a transformation: G-key,R-Key,S-Key

2.77RC2_Bug_greasepencil_mapping.blend
go to edit mode of greasepencil
do a transformation: G-key,R-Key,S-Key

**System Information** Acer Aspire V3-772G Windows 8.1 Processor: Intel(R) Core(TM) i7-4702MQ CPU @ 2.20GHz 2.20GHz RAM: 8GB system type : 64-bit operating System. X64 based processor Nividia Geforce GTX 760M **Blender Version** Broken: 2.77 RC2 date: 2016-03-07 19.56 hash: 02cabda factory settings also tested on 2.76 RC3 Date 2015-09-30 16:05 hash fb78f6b factory settings Worked: N.A. **Short description of error** grease pencil points of view port mapped(2D) in edit mode, the transformations do not correspond to the mouse movement. grab +mouse up = points go right grab + mouse down = points go left grab +mouse left = points go left but also down grab + mouse down = point go right but also up rotate and scale the orgin point is at the right of the screen when a drawing of 2d and a drawing of 3d are selected the 3d version is also affected with wrong transformation mappings **Exact steps for others to reproduce the error** empty file:(factory settings) go to grease pencil tab in the tool window of the 3d view from the stroke placement options[View,Cursor,Surface,Stroke], pick: View draw a pattern(D-key) click enable edit in the tool panel, select points [example press B-key] do a transformation: G-key,R-Key,S-Key (in combination with a 3D drawing) from the stroke placement options[View,Cursor,Surface,Stroke], pick: Cursor draw a pattern(D-key) select points [example press B-key] do a transformation: G-key,R-Key,S-Key [2.77RC2_Bug_greasepencil_mapping.blend](https://archive.blender.org/developer/F295735/2.77RC2_Bug_greasepencil_mapping.blend) go to edit mode of greasepencil do a transformation: G-key,R-Key,S-Key

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @Rmm_GD

Added subscriber: @Rmm_GD

Added subscriber: @zeauro

Added subscriber: @zeauro

Same problem, here with 2.77RC2 and master 9777c5b.
Grab brush in GPsculpt mode have same incorrect behaviour.

For strokes following view changes, pivot point seems to be out of view for transformations.

Same problem, here with 2.77RC2 and master 9777c5b. Grab brush in GPsculpt mode have same incorrect behaviour. For strokes following view changes, pivot point seems to be out of view for transformations.

Added subscriber: @Sergey

Added subscriber: @Sergey
Joshua Leung was assigned by Sergey Sharybin 2016-03-22 15:54:35 +01:00

Added subscriber: @JoshuaLeung

Added subscriber: @JoshuaLeung

@JoshuaLeung, mind looking into this one?

@JoshuaLeung, mind looking into this one?

This issue was referenced by c87e65542c

This issue was referenced by c87e65542c49f348ebdf712b05d2132ccbb181bb
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member
  • That commit only fixes the original issue (for transform)
  • The issue with the grab brush needs further attention - It actually doesn't work that great other than for the 3D strokes in the 3D view currently
* That commit only fixes the original issue (for transform) * The issue with the grab brush needs further attention - It actually doesn't work that great other than for the 3D strokes in the 3D view currently
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Hi! just noticed:
while "grab" seems to be fine now, "twist", "pinch" and "randomize" still seem to go crazy in view-aligned strokes...

Hi! just noticed: while "grab" seems to be fine now, "twist", "pinch" and "randomize" still seem to go crazy in view-aligned strokes...
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#47833
No description provided.